--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+* {margin:0px; padding: 0px;}
+a{ text-decoration: none;}
+.clearfix{ overflow:auto}
+
 .view {
   background: url("https://mdbootstrap.com/img/Photos/Others/img (50).jpg")no-repeat center center;
   background-size: cover;
@@ -6,6 +10,13 @@
 .mx-auto{
   margin-top:50px;
   margin-bottom:100px;
- width: 400px;
- display: block;
+  width: 400px;
+  display: block;
 }
+.navbar-nav li{
+  
+  padding: 0px 15px;
+  
+}
+
+
